<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Toolbox.io</string>
    <string name="home">Home</string>
    <string name="applocker">App Locker</string>
    <string name="settings">Settings</string>
    <string name="permissions_required">Permissions required</string>
    <string name="grant">Grant</string>
    <string name="accessibility_service_description">This service is used for:\n<ul>\n<li>AppLocker</li>\n</ul>\nThis service NEVER collects your data to hack you, etc.\nIt is used ONLY for the provided functions above.</string>
    <string name="appinfo">App info</string>
    <string name="closeapp">Close app</string>
    <string name="app_keeps_stopping">%1$s has stopped</string>
    <string name="error_disabling_service">Error disabling service</string>
    <string name="select_apps">Applications</string>
    <string name="select_apps_d">Select the applications to apply protection to</string>
    <string name="test_crash">Test crash</string>
    <string name="test_crash_d">This app will crash by dividing by 0</string>
    <string name="test_fake_crash">Test fake crash</string>
    <string name="test_fake_crash_d">Show a fake crash dialog</string>
    <string name="select_apps1">Select applications</string>
    <string name="selall">Select all</string>
    <string name="done">Done</string>
    <string name="sel" tools:ignore="PluralsCandidate">%1$d selected</string>
    <string name="clear">Clear</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setpassword">Set password</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_dont_match">Passwords don\'t match, try again</string>
    <string name="setpassword_d">Set the password that will be used to unlock the selected apps</string>
    <string name="unlockmethod">Unlock method</string>
    <string name="lp_ai">Long press \"App info\"</string>
    <string name="lp_c">Long press \"Close\"</string>
    <string name="lp_t">Long press title</string>
    <string name="p_t">Press title</string>
    <string name="select_something" tools:keep="@string/select_something" translatable="false">Select something first</string>
    <string name="update">New version is available</string>
    <string name="download">Download</string>
    <string name="dsa">Don\'t show again</string>
    <string name="update_version">Version %1$s</string>
    <string name="install">Install</string>
    <string name="devadmin">Device admin</string>
    <string name="devadmin_d">Set this app as the device administrator to prevent deletion and improve the security</string>
    <string name="delete">Delete</string>
    <string name="delete_d">Delete this app, remove Device Administrator</string>
    <string name="delete_app">Delete this app?</string>
    <string name="delete_app_d">Are you sure that you want to delete this app? \nIf you have a problem, send a bug report to GitHub.\nIf you delete this app, the protection will stop working and all your settings will be deleted.</string>
    <string name="yes">Yes</string>
    <string name="al_permissions">This feature requires the accessibility permission in order to work.\nThe permission is needed for:\n- detecting when an app gets opened, and if it\'s in the list of selected apps, close it and show a fake crash dialog\nThis permission is NEVER used for anything not listed here.\nYou will be taken back to the app after granting this permission.</string>
    <string name="grant_notification">Grant the notification permission to know when an update is available</string>
    <string name="open_app_again">Open app again</string>
    <string name="lp_oaa">Long press \"Open app again\"</string>
    <string name="p_oaa" tools:keep="@string/p_oaa">Press \"Open app again\"</string>
    <string name="unlock_protection">Unlock protection</string>
    <string name="unlock_attempts">Unlock attempts</string>
    <string name="unlock_attempts_d">The number of failed unlock attempts needed to trigger the security</string>
    <string name="actions">Security actions</string>
    <string name="actions_d">The actions that will be taken when the security is triggered</string>
    <string name="attempts">Attempts</string>
    <string name="up_permissions">This feature requires the device administrator permission in order to work.\nIt\'s used for the following:\n- Detect failed unlock attempts and take the required actions\n- Wipe your device if there was too many failed unlock attempts (configurable)\n- Disable the camera on the lock screen to prevent abuse\nThis app NEVER uses this permissions for anything not listed here.</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_d">An alarm sound will be played at 100% volume, and any attempts to change it will be prevented</string>
    <string name="intruderphoto">Intruder photo</string>
    <string name="intruderphoto_d">Take a photo without the intruder knowing</string>
    <string name="notification">Notification</string>
    <string name="notification_d">A notification saying that the security was triggered. It\'s recommended to disable this notification on the lock screen</string>
    <string name="sms">SMS message</string>
    <string name="sms_d">An SMS message will be sent to the selected numbers. Requires a SIM card</string>
    <string name="voice">Voice</string>
    <string name="voice_d">The device will say \"Don\'t touch my phone!\" or something else.</string>
    <string name="enable">Enable</string>
    <string name="add">Add</string>
    <string name="takefromfrontcam">Take picture from frontal camera</string>
    <string name="takefrombackcam">Take picture from back camera</string>
    <string name="all">All</string>
    <string name="backcam">Back camera</string>
    <string name="frontcam">Front camera</string>
    <string name="photodir" translatable="false">External photo folder</string>
    <string name="photodir_d" translatable="false">Select the folder in which the photos will be saved</string>
    <string name="rotate90">Rotate 90°</string>
    <string name="rotaten90">Rotate -90°</string>
    <string name="website">Website</string>
    <string name="nothing">No intruders :)</string>
    <string name="camrestriction">It is not recommended to select both because of strange Android restrictions, which can cause unexpected behavior and crashes.</string>
    <string name="erase">Erase</string>
    <string name="locked">Locked</string>
    <string name="lockapp">Password lock</string>
    <string name="lockapp_d">Lock this app with a PIN code.</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="dpw">Delete password?</string>
    <string name="dpw_d">You can delete the password that is set right now after disabling it.</string>
    <string name="no">No</string>
    <string name="security">Security</string>
    <string name="customization">Customization</string>
    <string name="tiles">Tiles</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="sleep">Sleep</string>
    <string name="failed_to_launch_files">Failed to launch the Files app. It may not exist on your device.</string>
    <string name="files">Files</string>
    <string name="ht_add_sc">How to add the shortcut?</string>
    <string name="asas">As a shortcut</string>
    <string name="asasa">As a separate app</string>
    <string name="continue1">Continue</string>
    <string name="rc">Remember your choice</string>
    <string name="smthwentwrong">Something went wrong</string>
    <string name="fsh">
        A \"Files\" icon was created in the launcher. You can always disable it by pressing
        "Remove icon" on the shortcut in the app.
    </string>
    <string name="cr">Your choice was remembered. If you want to change it, long press \"Add\".</string>
    <string name="ri">Remove icon</string>
    <string name="ir">The icon was removed. To add it again, press \"Add\" and choose \"As a separate app\".</string>
    <string name="tiles_beta">Tiles (Beta)</string>
    <string name="install_package">Install package</string>
    <string name="install_package_d">The new version is ready to be installed. Install?\nPlease note that you will need to grant the \"Install unknown apps\" permission to this app in order to continue.</string>
    <string name="tools">Tools</string>
    <string name="flasher">USB flasher</string>
    <string name="select_device">Select a device</string>
    <string name="select_device_d">Select a device that will be used to flash your image</string>
    <string name="usb_device">USB device</string>
    <string name="choose_image">Choose an image</string>
    <string name="choose_image_d">Choose an image to flash to the selected device from your file system</string>
    <string name="choose">Choose</string>
    <string name="start">Start</string>
    <string name="flash_error">Can\'t flash</string>
    <string name="flash_error_d">The image cannot be flashed because of the following reason:</string>
    <string name="no_image_chosen">No image was chosen.</string>
    <string name="no_device_selected">No device was selected.</string>
    <string name="file_bigger_than_device">The image is bigger than the target device.</string>
    <string name="unknown_error">Unknown error. Try again, and if you get this again, post an issue on GitHub.</string>
    <string name="file_bigger_than_device_0b">The image is bigger than the target device. The device is 0 B, so it may be a malfunction.</string>
    <string name="apkextractor">APK extractor</string>
    <string name="search_for_apps">Search for apps</string>
    <string name="system">System apps</string>
    <string name="user">User apps</string>
    <string name="filters">Filters</string>
    <string name="app_groups">App groups</string>
    <string name="sorting_order">Sorting order</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="recently_used">Recently used</string>
    <string name="normal">Normal</string>
    <string name="reverse">Reverse</string>
    <string name="install_source">Install source</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="rustore" translatable="false">RuStore</string>
    <string name="other">Other</string>
    <string name="allow_biometric">Allow biometric authentication</string>
    <string name="allow_biometric_d">Allow unlocking this app with a fingerprint or your face.</string>
    <string name="biometric">Biometrical authentication</string>
    <string name="dont_show_in_recents">Don\'t show in recents</string>
    <string name="dont_show_in_recents_d">Don\'t show the contents of this app in the \"Recents\" menu to keep your privacy.</string>
    <string name="show_pw">Show password</string>
    <string name="hide_pw">Hide password</string>
    <string name="old_password_cannot_be_empty">Old password cannot be empty</string>
    <string name="menu">Menu</string>
    <string name="app_desc">your All-in-One Toolbox</string>
    <string name="materialYou">Enable Material You theming</string>
    <string name="materialYou_d">Enable the dynamic theme based on your wallpaper. Works only on Android 12 or higher.</string>
    <string name="theme">Theme</string>
    <string name="as_system">As system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="empty" translatable="false" />
    <string name="back">Back</string>
    <string name="about">About app</string>
</resources>