<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.protection.applocker.FakeCrashActivity"
    android:gravity="center"
    android:id="@+id/pw_R">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="?attr/materialCardViewFilledStyle"
        android:backgroundTint="?attr/colorSurface"
        app:cardCornerRadius="30dp"
        android:maxWidth="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_max="500dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pw_im"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/enter_password" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
                    android:id="@+id/pw_et" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pw_sm"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/change_password" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
                    android:id="@+id/pw_opw" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
                    android:id="@+id/pw_npw" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
                    android:id="@+id/pw_cpw" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/pw_c"
                    tools:ignore="ButtonOrder" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/pw_ok" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>