<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.protection.applocker.FakeCrashActivity"
    android:gravity="center"
    android:id="@+id/al_um_r">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="?attr/materialCardViewFilledStyle"
        android:backgroundTint="?attr/colorSurface"
        app:cardCornerRadius="30dp"
        android:id="@+id/al_fc_d"
        android:maxWidth="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_max="500dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/al_um_l"
                android:text="@string/unlockmethod" />
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/al_um_lp_c"
                    android:id="@+id/al_um_o">
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/al_um_lp_ai"
                        android:enabled="false"
                        android:visibility="gone"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lp_ai"
                        android:textSize="17sp" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/al_um_lp_c"
                        android:enabled="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lp_c"
                        android:textSize="17sp"
                        android:visibility="gone" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/al_um_lp_oaa"
                        android:enabled="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lp_oaa"
                        android:textSize="17sp" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/al_um_lp_t"
                        android:enabled="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/lp_t"
                        android:textSize="17sp" />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/al_um_p_t"
                        android:enabled="true"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:text="@string/p_t"
                        android:textSize="17sp" />
                </RadioGroup>
            </androidx.core.widget.NestedScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/al_um_c"
                    tools:ignore="ButtonOrder" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:id="@+id/al_um_ok" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>