<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.search.SearchBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_for_apps"
        android:id="@+id/apkextractor_search"
        android:fitsSystemWindows="false"
        android:layout_marginTop="0dp"
        app:layout_insetEdge="top" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@id/apkextractor_search"
        app:layout_anchorGravity="top|end"
        app:layout_dodgeInsetEdges="top">
        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system"
                style="@style/Widget.Material3.Chip.Filter" />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                style="@style/Widget.Material3.Chip.Filter"
                android:checked="true" />
        </com.google.android.material.chip.ChipGroup>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apkextractor_apps" />
    </LinearLayout>
    <com.google.android.material.search.SearchView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_for_apps"
        app:layout_anchor="@id/apkextractor_search"
        android:fitsSystemWindows="false"
        android:id="@+id/apkextractor_search_view">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apkextractor_apps_2" />
    </com.google.android.material.search.SearchView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>